resources/trusted-content-prod/exhort-prod/prod-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    app: exhort
  name: exhort
spec:
  host: rhda.rhcloud.com
  to:
    kind: Service
    name: exhort
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
